--- a/book/book.tex
+++ b/book/book.tex
@@ -2467,7 +2467,7 @@ Intro
 
 \section{The Freshman Plague}
 
-Every year at Olin College, a new group of about 90 students come to campus for the first time from around the country and the world.  Most of them arrive healthy and happy, but we should expect at least one, by happenstance, to bring with them some kind of infectious disease.  A few weeks later, predictably, some fraction of the incoming class comes down with what we call ``The Freshman Plague".
+Every year at Olin College, about 90 new students come to campus from around the country and the world.  Most of them arrive healthy and happy, but we should expect at least one, by chance, to come with some kind of infectious disease.  A few weeks later, predictably, some fraction of the incoming class comes down with what we call ``The Freshman Plague".
 
 In this chapter we introduce a well-known model of infectious disease, the Kermack-McKendrick model, and use it to explain the progression of the disease over the course of the semester, predict the effect of possible interventions (like immunization) and design the most effective intervention campaign.
 
@@ -2487,15 +2487,15 @@ The Kermack-McKendrick model is a simple version of an ``SIR model", so-named be
 
 \end{itemize}
   
-In the basic version of the model, people who have recovered are considered to be immune to reinfection.  That is a reasonable model for some diseases, but not for others, so it should be on the list of assumptions we should consider when we evaluate the model.
+In the basic version of the model, people who have recovered are considered to be immune to reinfection.  That is a reasonable model for some diseases, but not for others, so it should be on the list of assumptions to reconsider later.
 
-Now let's think about how we should expect the number of people in each of these categories to change over time.  Suppose we know that people with the disease are infectious for a period of 4 days on average.  If 100 people are infected at a particular point in time, if we ignore the particular time each one became infected, we would expect about 1 out of 4 to recover on any particular day.
+Let's think about how we should expect the number of people in each of these categories to change over time.  Suppose we know that people with the disease are infectious for a period of 4 days, on average.  If 100 people are infectious at a particular point in time, and we ignore the particular time each one became infected, we expect about 1 out of 4 to recover on any particular day.
 
-Putting that a different way, if the time between recoveries is 4 days, the recovery rate is about 1 recovery per 4 days, which we'll denote with the parameter $\gamma$ (which is the Greek letter gamma).  If the total number of people in the population is $N$, and the fraction currently infected is $i$, the total number of recoveries we expect per day is $\gamma i N$.
+Putting that a different way, if the time between recoveries is 4 days, the recovery rate is about 0.25 recoveries per day, which we'll denote with the parameter $\gamma$ (the Greek letter gamma).  If the total number of people in the population is $N$, and the fraction currently infected is $i$, the total number of recoveries we expect per day is $\gamma i N$.
 
-Now let's think about the number of new infections.  Suppose we know that each susceptible person comes into contact with 1 person every three days, on average, in such a way that they would contract the disease if the other person is infected.  We'll denote this contact rate with the parameter $\beta$ (which is the Greek letter beta).
+Now let's think about the number of new infections.  Suppose we know that each susceptible person comes into contact with 1 person every 3 days, on average, in such a way that they would contract the disease if the other person is infected.  We'll denote this contact rate with the parameter $\beta$ (the Greek letter beta).
 
-It's probably not reasonable to assume that we know $\beta$ ahead of time, but later in the chapter we'll see how we could estimate this value based on data from previous semesters.
+It's probably not reasonable to assume that we know $\beta$ ahead of time, but later we'll see how we could estimate it based on data from previous semesters.
 
 If $s$ is the fraction of the population that's susceptible, $s N$ is the number of susceptible people, $\beta s N$ is the number of contacts per day, and $\beta s i N$ is the number of those contacts where the other person is infectious.
 
@@ -2509,10 +2509,12 @@ In summary:
 
 \end{itemize}
 
+This model assumes that the population is closed, that is, no one arrives or departs.  So the size of the population, $N$, is constant.
+
 
 \section{The SIR equations}
 
-If we treat time as a continuous quantity, we can write differential equations that describe the rates of change for $s$, $i$, and $r$, where $r$ is the fraction of the population that has recovered:
+If we treat time as a continuous quantity, we can write differential equations that describe the rates of change for $s$, $i$, and $r$ (where $r$ is the fraction of the population that has recovered):
 %
 \begin{align*}
 \frac{ds}{dt} &= -\beta s i \\
@@ -2522,11 +2524,9 @@ If we treat time as a continuous quantity, we can write differential equations t
 %
 To avoid cluttering the equations, I leave it implied that $s$ is a function of time, $s(t)$, and likewise for $i$ and $r$.
 
-This model assumes that the population is closed, that is, that no one arrives or departs.  So the size of the population, $N$, is constant.  If the total of $s$, $i$, and $r$ is initially 1, it will always be 1.
+SIR models are examples of {\bf compartment models}, so-called because they divide the world into discrete categories, or compartments, and describe transitions from one compartment to another.  Compartments are also called {\bf stocks} and transitions between them are called {\bf flows}.
 
-SIR models are examples of {\bf compartment models}, so-called because they divide the world into discrete categories, or compartments, and describe transitions from one compartment to another.  Compartments are also sometimes called {\bf stocks} and transitions between them are called {\bf flows}.
-
-In this example, there are three stocks, susceptible, infected, and recovered, and two flows, new infections and recoveries.  Compartment models are often represented visually using stock-and-flow diagrams (see \url{https://en.wikipedia.org/wiki/Stock_and_flow}.
+In this example, there are three stocks --- susceptible, infected, and recovered --- and two flows --- new infections and recoveries.  Compartment models are often represented visually using stock-and-flow diagrams (see \url{https://en.wikipedia.org/wiki/Stock_and_flow}.
 
 Figure~\ref{???} shows the stock and flow diagram for an SIR model.
 
@@ -2535,7 +2535,7 @@ DIAGRAM COMING SOON
 
 \section{Implementation}
 
-For a given physical system, there are many possible models.  And once we have chosen a model, there are many ways to represent it; for example, as a stock-and-flow diagram, as a set of differential equations, or as a Python program.
+For a given physical system, there are many possible models, and for a given model, there are many ways to represent it.  For example, we can represent an SIR model as a stock-and-flow diagram, as a set of differential equations, or as a Python program.
 
 The process of representing a model in these forms is called {\bf implementation}.  In this section, we implement the SIR model in Python.
 
@@ -2560,7 +2560,7 @@ This series represents the number of people in each compartment.  To convert to 
 init /= np.sum(init)
 \end{python}
 
-To get started, we'll assume we know the time time between contacts and recovery times:
+For now, let's assume we know the time between contacts and time between recoveries:
 
 \begin{python}
 tc = 3             # time between contacts in days 
@@ -2574,7 +2574,7 @@ beta = 1 / tc      # contact rate in per day
 gamma = 1 / tr     # recovery rate in per day
 \end{python}
 
-Now we need a System object to contain the parameters and initial conditions:
+Now we need a \py{System} object to store the parameters and initial conditions:
 
 \begin{python}
 def make_system(beta, gamma, init=init):
@@ -2585,12 +2585,12 @@ def make_system(beta, gamma, init=init):
                   beta=beta, gamma=gamma)
 \end{python}
 
-This function takes the parameters and initial conditions as parameters and returns a new System object.  The default value for \py{t_end} is 14 weeks, about the length of a semester.
+This function takes the parameters and initial conditions as parameters and returns a new \py{System} object.  The default value for \py{t_end} is 14 weeks, about the length of a semester.
 
 
 \section{The update function}
 
-At any point in time, the state of the system is represented by a Series object with three values, \py{s}, \py{i} and \py{r}.  The update function takes this series as a parameter, along with the System object that contains the parameters, and computes the state of the system during the next time step:
+At any point in time, the state of the system is represented by a \py{Series} object with three values, \py{s}, \py{i} and \py{r}.  The update function takes this series as a parameter, along with the \py{System} object that contains the parameters, and computes the state of the system during the next time step:
 
 \begin{python}
 def update1(system, state):
@@ -2606,7 +2606,7 @@ def update1(system, state):
     return Series([s, i, r], index=state.index)
 \end{python}
 
-The first line uses a feature we have not seen before, {\bf multiple assignment}.  The value on the right side is a Series that contains three values.  The left hand side is a sequence of three variable names.  The assignment does just what you would want: it assigns the three values from the Series to the three variables, in order.
+The first line uses a feature we have not seen before, {\bf multiple assignment}.  The value on the right side is a \py{Series} that contains three values.  The left hand side is a sequence of three variable names.  The assignment does just what you would want: it assigns the three values from the \py{Series} to the three variables, in order.
 
 The update function computes \py{infected} and \py{recovered} as a fraction of the population, then updates \py{s}, \py{i} and \py{r}.  The return value is a Series that contains the updated values and the same index as \py{state}.
 
@@ -2625,7 +2625,7 @@ R    0.002747
 dtype: float64
 \end{result}
 
-\py{dtype} indicates the type of the data in the Series; \py{float64} indicates that it contains 64-bit floating-point numbers.  A {\bf floating-point} can represent a number with a decimal or fractional part, as opposed to an integer.
+\py{dtype} indicates the type of the data in the \py{Series}; \py{float64} indicates that it contains 64-bit floating-point numbers.  A {\bf floating-point number} can represent a number with a decimal or fractional part, as opposed to an integer.
 
 
 \section{Running the model}
@@ -2640,7 +2640,7 @@ def run_model(system, update_func):
     return state
 \end{python}
 
-The parameters of \py{run_model} are the System object, which contains the model parameters, initial conditions, and values of \py{t0} and \py{t_end}, and the update function.  The outline of this function should look familiar; it is simular to the function we used for the population model in Section~\ref{nowwithstate}.
+The parameters of \py{run_model} are the \py{System} object, which contains the model parameters, initial conditions, and values of \py{t0} and \py{t_end}, and the update function.  The outline of this function should look familiar; it is simular to the function we used for the population model in Section~\ref{nowwithstate}.
 
 We can call \py{run_model} like this:
 
@@ -2662,7 +2662,7 @@ This result indicates that after 14 weeks (98 days), about 52\% of the populatio
 
 \section{Collecting the results}
 
-The previous version of \py{run_model} only returns the state of the system at the end of the simulation, \py{t_end}, but we might want to see how the state changes over time.  We'll see two ways to do that: first, using three Series objects, then using one DataFrame.
+The previous version of \py{run_model} only returns the state of the system at the end of the simulation, \py{t_end}, but we might want to see how the state changes over time.  We'll consider two ways to do that: first, using three \py{Series} objects, then using one \py{DataFrame}.
 
 Here's the first version:
 
@@ -2679,33 +2679,28 @@ def run_model(system, update_func):
         state = update_func(system, state)
         S[i+1], I[i+1], R[i+1] = state
     
-    system.results = S, I, R
+    system.S = S
+    system.I = I
+    system.R = R
 \end{python}
 
-First, we create the Series objects that will contain the results.  I'll use capital letters \py{S}, \py{I} and \py{R} to indicate that each of these objects is a Series that represents the values of \py{s}, \py{i} and \py{r} as they change over time.  A Series of values like this is called a {\bf time series} (see \url{https://en.wikipedia.org/wiki/Time_series}).
+First, we create the Series objects that will contain the results.  I'll use capital letters \py{S}, \py{I} and \py{R} to indicate that each of these objects is a \py{Series} that represents the values of \py{s}, \py{i} and \py{r} as they change over time.  A \py{Series} of values like this is called a {\bf time series} (see \url{https://en.wikipedia.org/wiki/Time_series}).
 
-The initial value of \py{state} is a copy of \py{system.init}, which is a Series that contains the initial values of \py{s}, \py{i} and \py{r}.  A variable like \py{state}, which represents the condition of the system at a point in time, is called a {\bf state vector} (see \url{https://en.wikipedia.org/wiki/State-space_representation}).  The values in the state vector are called {\bf state variables}.
+The initial value of \py{state} is a copy of \py{system.init}, which is a \py{Series} that contains the initial values of \py{s}, \py{i} and \py{r}.  A variable like \py{state}, which represents the condition of the system at a point in time, is called a {\bf state vector} (see \url{https://en.wikipedia.org/wiki/State-space_representation}).  The values in the state vector are called {\bf state variables}.
 
-It might be confusing, at first, that we are using the same kind of object, a Series, to represent both a time series and a state vector.  You might have to think about it, at first, but you'll get used to it.
+It might be confusing, at first, that we are using the same kind of object, \py{Series}, to represent both a time series and a state vector.  You'll get used to it.
 
 Inside the loop, we use \py{update_func} to compute the state vector for the next time step, then use multiple assignment to unpack the three elements of the state vector and assign each of them to the corresponding time series.
 
-At the end of the function, we store the Series objects, \py{S}, \py{I} and \py{R}, as a new attribute of the System object, \py{system}.
+At the end of the function, we store \py{S}, \py{I}, and \py{R} as attributes of the \py{System} object.
 
-Now we can call the function like this:
+Now we can run the function like this:
 
 \begin{python}
 run_model(sir, update1)
 \end{python}
 
-And then use multiple assignment to unpack the results.
-
-\begin{python}
-run_model(sir, update1)
-S, I, R = sir.results
-\end{python}
-
-\py{S}, \py{I} and \py{R} are Series object that represent time series, which we can plot like this:
+We'll use the following function to plot the results:
 
 \begin{python}
 def plot_results(S, I, R):
@@ -2716,19 +2711,24 @@ def plot_results(S, I, R):
              ylabel='Fraction of population')
 \end{python}
 
+And run it like this:
+
+\begin{python}
+plot_results(sir.S, sir.I, sir.R)
+\end{python}
 
 \begin{figure}
 \centerline{\includegraphics[height=3in]{figs/chap05-fig01.pdf}}
-\caption{Time series for \py{S}, \py{I} and \py{R} over the course of 98 days.}
+\caption{Time series for \py{S}, \py{I}, and \py{R} over the course of 98 days.}
 \label{chap05-fig01}
 \end{figure}
 
-Figure~\ref{chap05-fig01} shows the result.  Notice that it takes about three weeks (21 days) for the outbreak to get going, and about six weeks (42 days) before it peaks.  The fraction of the population that's infected is never very high, but it adds up.  Eventually, almost half the population gets sick. 
+Figure~\ref{chap05-fig01} shows the result.  Notice that it takes about three weeks (21 days) for the outbreak to get going, and about six weeks (42 days) before it peaks.  The fraction of the population that's infected is never very high, but it adds up.  In total, almost half the population gets sick. 
 
 
 \section{Now with a DataFrame}
 
-If the number of state variables is small, like three, keeping track of three time series objects might not be so bad.  But if there are more, a better alternative is to use a DataFrame.  In Section~\ref{worldpopdata} we got a DataFrame as a result from \py{read_html}.  In this section we'll create a DataFrame and use it to store state variables.
+If the number of state variables is small, storing them as separate \py{Series} objects might not be so bad.  But a better alternative is to use a \py{DataFrame}.  In Section~\ref{worldpopdata} we worked with \py{DataFrame} objects we got from \py{read_html}.  In this section we'll create a \py{DataFrame} and use it to store state variables.
 
 Here's a more concise version of \py{run_model}:
 
@@ -2743,31 +2743,29 @@ def run_model(system, update_func):
     system.results = df
 \end{python}
 
-The first line creates an empty DataFrame with one column for each of the state variables.
+The first line creates an empty \py{DataFrame} with one column for each of the state variables.
 
-Before the loop starts, we want to store the initial conditions in the DataFrame with the time index 0.  Based on the way we've been using Series objects, it might be tempting to write:
+Before the loop starts, we want to store the initial conditions in the \py{DataFrame} at time index 0.  Based on the way we've been using \py{Series} objects, it might be tempting to write:
 
 \begin{python}
 df[0] = system.init
 \end{python}
 
-The problem is that when you use the bracket operator with a DataFrame, it selects a column, not a row.  For example, to select the first column, we could write
+The problem is that when you use the bracket operator with a \py{DataFrame}, it selects a column, not a row.  For example, to select the first column, we could write
 
 \begin{python}
 df['S']
 \end{python}
 
-The result would be a Series.  To read or write a single row, we have use use \py{loc}, which stands for ``location".  So \py{df.loc[0]} reads a row from a DataFrame and 
+The result would be a time series.  To read or write a single row, we have to use \py{loc}, which stands for ``location".  So \py{df.loc[0]} reads a row from a \py{DataFrame} and 
 
 \begin{python}
 df.loc[0] = system.init
 \end{python}
 
-assigns the values from \py{system.init} to the first row of \py{df}.  Since the value on the right-hand side is a Series, the assignment matches up the index from the Series with the columns of the DataFrame, assigning the \py{S} value from \py{system.init} to the \py{S} column of the DataFrame, and so on.
+assigns the values from \py{system.init} to the first row of \py{df}.  Since the value on the right-hand side is a \py{Series}, the assignment matches up the index from the \py{Series} with the columns of the \py{DataFrame}; it assigns the \py{S} value from \py{system.init} to the \py{S} column of the \py{DataFrame}, and likewise with \py{I} and \py{R}.
 
-We can use the same feature to write the loop more concisely, writing the results from \py{update_func} directly into \py{df}.
-
-Finally, we store \py{df} as a new attribute of \py{system} named \py{results}.
+This version of \py{run_model} uses the same feature to write the loop more concisely, writing the results from \py{update_func} directly into \py{df}.  Finally, we store \py{df} as a new attribute of \py{system}.
 
 We can call this version of \py{run_model} like this:
 
@@ -2782,16 +2780,16 @@ df = sir.results
 plot_results(df.S, df.I, df.R)
 \end{python}
 
-As we saw in Section~\ref{series}, we can use dot notation to select columns from the DataFrame.
+As we saw in Section~\ref{series}, we can use dot notation to select columns from the \py{DataFrame}.
 
 
 \section{Metrics}
 
-When we plot time series, we get a view of everything that happened when the model ran, but often we want to boil it down to a small set of numbers, often one, that summarizes the outcome.  These summary statistics are called {\bf metrics}.
+When we plot a time series, we get a view of everything that happened when the model ran, but often we want to boil it down to a few numbers, ideally one, that summarize the outcome.  These summary statistics are called {\bf metrics}.
 
-In this example, we might want to know the time until the peak of the outbreak, the number of people who are sick at the peak, the number of students who will still be sick at the end of the semester, or the total number of students who will be sick at any point.
+In the SIR model, we might want to know the time until the peak of the outbreak, the number of people who are sick at the peak, the number of students who will still be sick at the end of the semester, or the total number of students who will be sick at any point.
 
-As an example, I will focus on the last one -- the total number of sick students -- and we will consider interventions intended to minimize it.
+As an example I will focus on the last one --- the total number of sick students --- and we will consider interventions intended to minimize it.
 
 When a person gets infected, they move from \py{S} to \py{I}, so we can compute the total number of infections like this:
 
@@ -2801,11 +2799,19 @@ def calc_total_infected(system):
     return df.S[system.t0] - df.S[system.t_end]
 \end{python}
 
+As an exercise, consider writing functions to compute other metrics.
 
+
+\section{Immunization}
+
+
+
+
+\chapter{Analysis}
 
 \section{Sweeping beta}
 
-Now we can run the model for any values of the parameters and display the results:
+Now we can run the model for any values of the parameters and display the outcome:
 
 \begin{python}
 sir.beta = 0.333
@@ -2814,7 +2820,7 @@ run_model(sir, update1)
 print(calc_total_infected(sir))
 \end{python}
 
-We can create a array with a range of values for \py{beta}:
+To see how the outcome depends on the first parameter, \py{beta}, we'll create an array with a range of values:
 
 \begin{python}
 beta_array = linspace(0.1, 0.9, 11)
@@ -2829,34 +2835,42 @@ for beta in beta_array:
     print(sir.beta, calc_total_infected(sir))
 \end{python}
 
-Even better, we can encapsulate that code in a function and store the results in a Series:
+Even better, we can encapsulate that code in a function and store the results in a \py{Sweep} object:
 
 \begin{python}
 def sweep_beta(beta_array, gamma):
-    series = Series()
+    sweep = Sweep()
     for beta in beta_array:
         system = make_system(beta, gamma)
         run_model(system, update1)
-        series[system.beta] = calc_total_infected(system)
-    return series
+        sweep[system.beta] = calc_total_infected(system)
+    return sweep
 \end{python}
 
-We can call \py{sweep_beta} like this:
+We can run \py{sweep_beta} like this:
 
 \begin{python}
-infected_series = sweep_beta(beta_array, gamma)
+infected_sweep = sweep_beta(beta_array, gamma)
 \end{python}
 
-And plot the results like this:
+And plot the results:
 
 \begin{python}
 label = 'gamma = ' + str(gamma)
-plot(infected_series, label=label)
+plot(infected_sweep, label=label)
 \end{python}
 
-The first line uses string operations to assemble a label for the plotted line.  If the value of \py{gamma} is \py{0.25}, the value of \py{label} is the string \py{'gamma = 0.25'}.
+The first line uses string operations to assemble a label for the plotted line.  
 
-When the \py{+} operator is applied to strings, it joins them end-to-end, which is called {\bf concatenation}.  The function \py{str} converts any type of object to a String representation.  In this case, \py{gamma} is a floating-point number, so we have to convert it to a string before trying to concatenate it.
+\begin{itemize}
+
+\item When the \py{+} operator is applied to strings, it joins them end-to-end, which is called {\bf concatenation}.  
+
+\item The function \py{str} converts any type of object to a String representation.  In this case, \py{gamma} is a floating-point number, so we have to convert it to a string before trying to concatenate it.
+
+\end{itemize}
+
+If the value of \py{gamma} is \py{0.25}, the value of \py{label} is the string \py{'gamma = 0.25'}.
 
 \begin{figure}
 \centerline{\includegraphics[height=3in]{figs/chap05-fig02.pdf}}
@@ -2868,8 +2882,114 @@ Figure~\ref{chap05-fig02} shows the results.  Notice that the x-axis is the para
 
 When \py{beta} is small, the contact rate is low and the outbreak never really takes off; the total number of infected students is near zero.
 
-As \py{beta} increases...
+As \py{beta} increases, it reaches a threshold near 0.3 and the fraction of infected students increases quickly.  When \py{beta} exceeds 0.5, more than 80\% of the population gets sick.
 
+
+\section{Sweeping gamma}
+
+Now let's see what that looks like for a few different values of \py{gamma}.  Again, we'll use \py{linspace} to make an array of values:
+
+\begin{python}
+gamma_array = linspace(0.1, 0.7, 4)
+\end{python}
+
+And run \py{sweep_beta} for each value of \py{gamma}:
+
+\begin{python}
+for gamma in gamma_array:
+    infected_sweep = sweep_beta(beta_array, gamma)
+    label = 'gamma = ' + str(gamma)
+    plot(infected_sweep, label=label)
+\end{python}
+
+\begin{figure}
+\centerline{\includegraphics[height=3in]{figs/chap05-fig03.pdf}}
+\caption{Total number of infected students as a function of the parameter \py{beta}, for several values of \py{gamma}.}
+\label{chap05-fig03}
+\end{figure}
+
+Figure~\ref{chap05-fig03} shows the results.  When \py{gamma} is low, the recovery rate is low, which means people are infectious longer.  In that case, even low a contact rate (\py{beta}) results in an epidemic.
+
+When \py{gamma} is high, \py{beta} has to be even higher to get things going.  That observation suggests that there might be a relationship between \py{gamma} and \py{beta} that determines the outcome of the model.  
+
+In fact, there is.  I will demonstrate it first by running simulations, then derive it by analysis.
+
+
+\section{The contact number}
+
+Before we go on, let's encapsulate the code from the previous section in a function:
+
+\begin{python}
+def sweep_parameters(beta_array, gamma_array):
+    df = DataFrame(columns=gamma_array)
+    for gamma in gamma_array:
+        df[gamma] = sweep_beta(beta_array, gamma)
+    return df
+\end{python}
+
+\py{sweep_parameters} takes as parameters two arrays: a range of values for \py{beta} and a range of values for \py{gamma}.
+
+It creates a \py{DataFrame} to store the results; it starts with one column for each value of \py{gamma}, then we will add one row for each value of \py{beta}.
+
+Each time through the loop, we run \py{sweep_beta}.  The result is a \py{Sweep} object with one element for each value of \py{gamma}.  Because the index of the \py{Sweep} matches the columns of the \py{DataFrame}, we can store the values from the \py{Sweep} as a new row in the \py{DataFrame}.
+
+At the end, the \py{DataFrame} stores the fraction of students infected for each pair of parameters, \py{beta} and \py{gamma}.
+
+We can run it like this:
+
+\begin{python}
+sweep_df = sweep_parameters(beta_array, gamma_array)
+\end{python}
+
+Then we can loop through the results like this:
+
+\begin{python}
+for gamma in df.columns:
+    sweep = df[gamma]
+    for beta in sweep.index:
+        frac_infected = sweep[beta]
+        print(beta, gamma, frac_infected)
+\end{python}
+
+This is the first example we've seen with one \py{for} loop inside another.  But there's nothing about it that should be too surprising.  Each time the outer loop runs, it selects a value of \py{gamma} from the columns of the \py{DataFrame} and extracts the corresponding \py{Sweep} object.  Each time the inner loop runs, it selects a value of \py{beta} from the \py{Sweep} and selects the corresponding element, which is the fraction of student infected.
+
+In this example, \py{sweep_df} has 4 columns, one for each value of \py{gamma}, and 11 rows, one for each value of \py{beta}.  So these loops print 44 lines, one for each pair of parameters.
+
+Now let's think about possible relationships between \py{beta} and \py{gamma}:
+
+\begin{itemize}
+
+\item When \py{beta} exceeds \py{gamma}, that means there are more contacts (that is, potential infections) than recoveries.  The difference between \py{beta} and \py{gamma} might be called the ``excess contact rate", in units of contacts per day.
+
+\item As an alternative, we might consider the ratio \py{beta/gamma}, which is the number of contacts per recovery.  Because the numerator and denominator are in the same units, this ratio is {\bf dimensionless}, which means it has no units.
+
+\end{itemize}
+
+Describing physical systems using dimensionless parameters is often a useful move in the modeling and simulation game.  In fact, it is so useful it has a name: nondimensionalization (see \url{https://en.wikipedia.org/wiki/Nondimensionalization#First_order_system}).
+
+So we'll try the second option first.  In the notebook for this chapter, you will explore the first option as an exercise.
+
+The following function encapsulates the previous loops and plots the fraction infected as a function of the ratio \py{beta/gamma}:
+
+\begin{python}
+def plot_sweep_df(df):
+    for gamma in df.columns:
+        sweep = df[gamma]
+        for beta in sweep.index:
+            frac_infected = sweep[beta]
+            plot(beta / gamma, frac_infected, 'ro')
+\end{python}
+
+\begin{figure}
+\centerline{\includegraphics[height=3in]{figs/chap05-fig04.pdf}}
+\caption{Total number of infected students as a function of the contact number, \py{beta/gamma}.}
+\label{chap05-fig04}
+\end{figure}
+
+Figure~\ref{chap05-fig04} shows that the results fall neatly on a single curve, at least approximately.  That means that we can predict the fraction of students who will be infected based on a single parameter, the ratio \py{beta/gamma}.  We don't need to know the values of \py{beta} and \py{gamma} separately.
+
+
+ is called the ``contact number"
 
 
 
